--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -11,7 +11,7 @@ max_width = 160
 tab_spaces = 2
 
 # Imports
-imports_granularity = "One"
+imports_granularity = "Crate"
 reorder_imports = true
 
 # Format comments
