--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   build-and-push:
     runs-on: [self-hosted]
+    env:
+      IMAGE_URL: ${{ secrets.REGISTRY_HOST_PORT }}/developer-portfolio-${{ github.ref_name }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -18,18 +20,14 @@ jobs:
         run: |
           {
             echo ""
-            echo ""
           } > .env
       - name: Build Docker image
-        run: |
-          docker build -t ${{ secrets.REGISTRY_HOST_PORT }}/developer-portfolio-${{ github.ref_name }}:${{ github.sha }} .
+        run: docker build --no-cache -t ${{ env.IMAGE_URL}}:${{ github.sha }} .
       - name: Tag Docker image as latest
-        run: |
-          docker tag ${{ secrets.REGISTRY_HOST_PORT }}/developer-portfolio-${{ github.ref_name }}:${{ github.sha }} ${{ secrets.REGISTRY_HOST_PORT }}/developer-portfolio-${{ github.ref_name }}:latest
+        run: docker tag ${{ env.IMAGE_URL}}:${{ github.sha }} ${{ env.IMAGE_URL}}:latest
       - name: Login to Docker registry
-        run: |
-          docker login ${{ secrets.REGISTRY_HOST_PORT }} -u ${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.REGISTRY_PASSWORD }}
+        run: echo "${{ secrets.REGISTRY_PASSWORD }}" | docker login ${{ secrets.REGISTRY_HOST_PORT }} -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
       - name: Push Docker images
-        run: |
-          docker push ${{ secrets.REGISTRY_HOST_PORT }}/developer-portfolio-${{ github.ref_name }}:${{ github.sha }}
-          docker push ${{ secrets.REGISTRY_HOST_PORT }}/developer-portfolio-${{ github.ref_name }}:latest
+        run: docker push ${{ env.IMAGE_URL}}:${{ github.sha }}
+      - name: Push Docker images
+        run: docker push ${{ env.IMAGE_URL}}:latest
