--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,8 +38,8 @@ inherits = "dev"
 
 [workspace.dependencies]
 anyhow = "1.0.98"
-dioxus = { version = "0.7.0-alpha.1", default-features = false }
-dioxus-free-icons = { git = "https://github.com/Distortedlogic/dioxus-free-icons.git", features = [
+dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", default-features = false }
+dioxus-free-icons = { git = "https://github.com/Distortedlogic/dioxus-free-icons.git", branch = "latest", features = [
   "bootstrap",
   "feather",
   "font-awesome-brands",
